--- a/package.json
+++ b/package.json
@@ -1,27 +1,45 @@
 {
-  "name": "simple-video-slider",
+  "name": "js-plugin-starter",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/simple-video-slider.js",
+  "repository": "git@github.com:michalsnik/js-plugin-starter.git",
+  "main": "dist/js/plugin.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test",
+    "buildjs": "browserify src/js/svs.js -o dist/js/svs.js"
   },
   "author": "Michał Sajnóg <michal.sajnog@hotmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-sass": "^2.0.4",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-minify-css": "^1.2.0",
-    "gulp-rollup": "^1.0.1",
-    "gulp-concat": "~2.4.3",
-    "gulp-uglify": "~1.1.0",
     "browser-sync": "~2.0.1",
-    "karma": "^0.13.11",
+    "browserify": "^11.2.0",
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-concat": "~2.4.3",
+    "gulp-imagemin": "~2.2.0",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "~1.1.0",
+    "gulp-util": "^3.0.6",
     "jasmine-core": "^2.3.4",
     "jasmine-fixture": "^1.3.3",
+    "jasmine-jquery": "^2.1.1",
+    "jquery": "^2.1.4",
+    "karma": "^0.13.11",
     "karma-browserify": "^4.4.0",
     "karma-chrome-launcher": "^0.2.1",
-    "karma-jasmine": "^0.3.6"
+    "karma-jasmine": "^0.3.6",
+    "lodash.assign": "^3.2.0",
+    "phantomjs": "^1.9.18",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.4.0"
+  },
+  "dependencies": {
+    "lodash.assign": "^3.2.0",
+    "lodash.debounce": "^3.1.1",
+    "lodash.foreach": "^3.0.3",
+    "lodash.throttle": "^3.0.4"
   }
 }
